# pypotd

./: .gitignore  setup.cfg
src/pypotd/: __init__.py  const.py  func.py
