[metadata]
name = pypotd
version = 1.0.0
author = Shea Zerda
author_email = shea@vulpes.club
description = Library to Generate Password-of-the-Day Data for ARRIS/Commscope Devices 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SnailShea/pypotd.git
classifiers = 
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
install_requires =
	pycryptodomex
package_dir= 
	=src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
